[package]
name = "hifive-nom-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.10.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.0"

[dependencies.nom]
# version = "7.0.0"
git = "https://github.com/Geal/nom"
default-features = false
features = []

# [dependences.combine]
# version = "4.6.2"
# default-features = false
# features = []

[dependencies.spinning_top]
version = "0.2.4"
